2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Convert `blas' benchmarks code to new framework.
	
	* benchmarks/blas/blas-test-saxpy.c: Delete.
	
	* benchmarks/blas/bench-saxpy.c,
	* benchmarks/blas/bench-daxpy.c: New.

	* benchmarks/blas/axy.d1,
	* benchmarks/blas/axy.d2,	
	* benchmarks/blas/axy.d3: Example data for both `saxpy' and
	`daxpy'.

	* benchmarks/blas/Makefile.am: Update accordingly.
	
2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Start to implement the top-level benchmark program.
	
	* benchmarks/lib/benchmark.c,
	* benchmarks/lib/benchmark.h: New.
	
	* benchmarks/lib/Makefile.am: Compile library for multiple
	targets.

	* configure.ac: Check for `ranlib' since it is required for making
	libraries.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce `benchmark/lib' for benchmarking framework.
	
	* benchmarks/lib/Makefile.am: New.
	* benchmarks/Makefile.am: Recurse into `lib'.

	* configure.ac: Generate Makefile for `lib'.

2009-10-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Create new demo `sep' to show off SEP allocation.
	
	* demo/sep.c: New.
	* demo/Makefile.am: Update accordingly.

2009-10-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reinstate numeric checking for the FFT code.
	
	* benchmarks/fft/fft_test1.c,	
	* benchmarks/fft/fft_test2.c: Do not ignore numeric output anymore
	since the diverging results on MT-Alpha were due to a simulation
	bug that is now fixed.
	
2009-09-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Avoid `-n' in test code.
	
	* demo/mandel.c,
	* benchmarks/fft/fft_test1.c,	
	* benchmarks/fft/fft_test2.c: Do not use `-n' in SLT_RUN any more.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `fft' benchmark program.
	
	* benchmarks/fft/fft_bench.c: Print cycle counts at each outer
	iteration.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' demo.
	
	* demo/mandel.c: Update to use the new API definition from
	note [sl7].
